--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
