--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "next": "15.0.3",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -16,7 +17,9 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-simple-typewriter": "^5.0.1",
-    "swiper": "^11.1.15"
+    "react-toastify": "^10.0.6",
+    "swiper": "^11.1.15",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
